--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -18,8 +18,12 @@
   
 </form>
 
-{% if error_message %}
-<p>{{ error_message }}</p>
+{% if messages %}
+<ul class="messages">
+  {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+  {% endfor %}
+</ul>
 {% endif %}
 
 {% endblock %}
